adding webcam packages and openssh-server

--- a/lubuntu-13.10-saucy-salamander/Makefile
+++ b/lubuntu-13.10-saucy-salamander/Makefile
@@ -14,6 +14,9 @@ dev: dev.txt
 media: media.txt
 	sudo apt-get -y install `grep -v ^# media.txt | m4`
 
+webcam: webcam.txt
+	sudo apt-get -y install `grep -v ^# webcam.txt | m4`
+
 util: util.txt
 	sudo apt-get -y install `grep -v ^# util.txt | m4`
 
